--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": " ",
   "name": "",
-  "description": "Farm LUFFY with LP Tokens",
+  "description": "Farm DEMENTOR with LP Tokens",
   "icons": [
     {
       "src": "favicon.ico",
